# Learning

./: .gitignore
.github/workflows/: python-app.yml
Docker/Basic/: .dockerignore  dockerfile  pyproject.toml
Docker/Basic/BasicDocker/: test.py
Docker/Basic/BasicDocker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Docker/NetworkDrive/: docker-compose.yml  dockerfile  pyproject.toml
Docker/NetworkDrive/DockerTesting.egg-info/: PKG-INFO  SOURCES.txt
Docker/NetworkDrive/NetworkDriveDocker/: test.py
Docker/NetworkDrive/Secrets/Run Secrets/: sql_login.yml
Testing/: tests.py
